syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "primitives.proto";

package ProjectOrigin.WalletSystem.V1;

// Anonymously functions, Externally accessible
service ExternalWalletService {
    rpc ReceiveSlice(ReceiveRequest) returns (ReceiveResponse);
}

// Requires authorization with a Bearer token JWT, sub field identifies the owner
// Could be internal only, up to the host to decide
service WalletService {
    rpc CreateWallet(CreateWalletRequest) returns (CreateWalletResponse); // Only allowed one per user for now, later multiple wallets per user will be allowed.
    rpc CreateWalletSection(CreateWalletSectionRequest) returns (WalletSectionReference);

    // Certificate functions, slices abstracted away and solved by wallet
    rpc QueryGranularCertificates(QueryRequest) returns (QueryResponse);
    rpc TransferCertificate(TransferRequest) returns (TransferResponse);
    rpc ClaimCertificates(ClaimRequest) returns (ClaimResponse);

    // Slice functions - more fine grained control to come
    // rpc QuerySlices(QuerySliceRequest) returns (QuerySliceResponse);
    // rpc SliceSlice(CreateSliceRequest) returns (CreateSliceResponse);
    // rpc ClaimSlice(ClaimSliceRequest) returns (ClaimSliceResponse);
    // rpc TransferSlice(TransferSliceRequest) returns (TransferSliceResponse);

    // Events should also be able to be emitted.. RPC or event bus?
}

message CreateWalletRequest {
    bytes PrivateKey = 1;
}

message CreateWalletResponse { }

message ReceiveRequest {
    bytes WalletSectionPublicKey = 1;
    uint32 WalletSectionPosition = 2;
    ProjectOrigin.Register.V1.FederatedStreamId CertificateId = 3;
    uint32 Quantity = 4;
    bytes RandomR = 5;
}

message ReceiveResponse {} // not yet sure what to return

message CreateWalletSectionRequest {} // not yet sure

message WalletSectionReference {
    int32 Version = 1; // The version of the Wallet protobuf API.
    string Endpoint = 2; // The url endpoint of the gRPC endpoint at which the wallet is hosted.
    bytes SectionPublicKey = 3; // The public key used to generate sub-public-keys for each slice.
}

message QueryRequest {
    // Later filters will be added.
}

message QueryResponse {
    repeated GranularCertificate GranularCertificates = 1;
}

message TransferRequest {
    ProjectOrigin.Register.V1.FederatedStreamId CertificateId = 1; // The certificate to transfer from
    uint32 Quantity = 2; // The quantity, either the total or a part of it, will be sliced implicitly by the wallet
    WalletSectionReference ReceiverWalletReference = 3; // The wallet to transfer to
    uint32 Position = 4; // The position on the receiver wallet key
}

message TransferResponse {} // not yet sure what to return

message ClaimRequest {
    ProjectOrigin.Register.V1.FederatedStreamId ConsumptionCertificateId = 1;
    ProjectOrigin.Register.V1.FederatedStreamId ProductionCertificateId = 2;
    uint32 Quantity = 3;
}

message ClaimResponse {} // not yet sure what to return


message GranularCertificate {
    ProjectOrigin.Register.V1.FederatedStreamId FederatedId = 1;
    uint32 Quantity = 2;
    google.protobuf.Timestamp Start = 3;
    google.protobuf.Timestamp End = 4;
    repeated Attribute Attributes = 5;
}

message Attribute {
    string Key = 1;
    string Value = 2;
}

message Uuid {
    string value = 1;
}
